# Encke-Protocol

./: LICENSE  README.md
chain/: config.yml  go.mod
chain/x/loan/keeper/: msg_server_approve_loan.go  msg_server_cancel_loan.go  msg_server_liquidate_loan.go  msg_server_repay_loan.go  msg_server_request_loan.go
chain/x/loan/types/: expected_keepers.go  message_request_loan.go
encke-contract/: Cargo.toml
encke-contract/src/: contract.rs  msg.rs  state.rs
encke-oracle/: Cargo.toml
encke-oracle/src/: contract.rs  msg.rs  state.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/borrow/: page.tsx
frontend/app/deposit/: page.tsx
frontend/app/login/: page.tsx
frontend/app/withdraw/: page.tsx
frontend/components/: asset-table.tsx  auth-layout.tsx  borrow-page.tsx  connect-wallet-button.tsx  dashboard-layout.tsx  dashboard-page.tsx  deposit-page.tsx  history-page.tsx  liquidate-page.tsx  logo.tsx  repay-page.tsx  withdraw-page.tsx
liquidator/: Cargo.toml
liquidator/src/: main.rs
