[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
cosmrs = { version = "0.21.1", features = ["rpc", "cosmwasm"]}
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
env_logger = "0.11.7"
hex = "0.4.3"
log = "0.4.26"
prost = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
